syntax = "proto3";

package sfc_generaltemplate;

import "Models/Common/pagination.proto";
import "Models/Common/sorting.proto";
import "Messages/Find/Filters/get_generaltemplates_filter.proto";

option csharp_namespace = "SFC.GeneralTemplate.Contracts.Messages.Find";

message GetGeneralTemplatesRequest
{
    Pagination pagination = 1;
    repeated Sorting sorting = 2;
    GetGeneralTemplatesFilter filter = 3;
}