syntax = "proto3";

package sfc_generaltemplate;

option csharp_namespace = "SFC.GeneralTemplate.Contracts.Messages.Get";

message GetGeneralTemplateRequest
{
    int64 id = 1;
}