syntax = "proto3";

package sfc_generaltemplate;

import "Models/GeneralTemplate/generaltemplate.proto";

option csharp_namespace = "SFC.GeneralTemplate.Contracts.Messages.Get";

message GetGeneralTemplateResponse
{
    GeneralTemplate generaltemplate = 1;
}